--- a/i18n/de/docusaurus-plugin-content-docs/current/60_topics/63_data_description_annotation/20_ontology.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/60_topics/63_data_description_annotation/20_ontology.mdx
@@ -32,30 +32,30 @@ In dieser tabellarischen Übersicht sind die geeigneten Ontologien in Bezug auf:
 * die Möglichkeit, sie modular wiederzuverwenden (wobei ein BFO-Abgleich und OBO-Kompatibilität eine erhöhte Möglichkeit darstellt),
 * und ihre Verwendung in bekannten Anwendungen.
 
-| Ontology | Domain | License | Modularity | Used in |
+| Ontologie | Domäne | Lizenz | Modularität | Verwendet von |
 | -------- | ------ | ------- | ---------- | ------- |
-| [ChEBI](https://www.ebi.ac.uk/ols/ontologies/chebi) | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO based | YMDB, HMDB, PubChem, MassBank, KNApSAcK, UM-BBD, GMD, SMID-DB |
-| [CHIRO](https://terminology.nfdi4chem.de/ts/ontologies/chiro)  | chemistry | [CC0 1.0](https://creativecommons.org/publicdomain/zero/1.0/) | BFO & OBO based | unknown |
-| [ChemOnt](http://classyfire.wishartlab.com/downloads) | chemistry | custom OA license | subsumable under BFO's *material entity* | YMDB, HMDB, T3DB, ECMDB, DrugBank,PubChem, ChEBI, LIPID MAPS, MoNA |
-| [CHEMINF](https://terminology.nfdi4chem.de/ts/ontologies/cheminf)  | chemistry | [CC-BY 3.0](https://creativecommons.org/licenses/by/3.0/) | BFO & OBO based | PubChem, Open PHACTS |
-| [CHMO](https://terminology.nfdi4chem.de/ts/ontologies/chmo)  | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO based | Chemotion, Allotrope™ |
-| [MOP](https://terminology.nfdi4chem.de/ts/ontologies/mop)  | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO based | RXNO |
-| [RXNO](https://terminology.nfdi4chem.de/ts/ontologies/rxno)  | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO based | NameRXN, Wikipedia, Chemotion |
-| [OntoKin](http://www.theworldavatar.com/kb/ontokin/ontokin.owl) | chemistry | unknown | OntoCAPE upper level & modules | J-Park Simulator |
-| [AFO](https://www.ebi.ac.uk/ols/ontologies/afo)  | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO classes & relations, many AFO- some custom OBO-modules  | Allotrope™ |
-| [PROCO](https://raw.githubusercontent.com/proco-ontology/PROCO/main/proco.owl) | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO/AFO & OBO based | Allotrope™ |
-| [MS](https://terminology.nfdi4chem.de/ontologies/ms) | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO mapping possible | mzML |
-| [nmrCV](https://terminology.nfdi4chem.de/ontologies/nmrcv) | chemistry | [Public Domain Mark 1.0](https://creativecommons.org/publicdomain/mark/1.0/deed) | BFO & OBO mapping possible | MetaboLights, HMDB |
-| [BFO](https://terminology.nfdi4chem.de/ontologies/bfo) | upper level (classes only) | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | OBO backbone | >300 ontologies & >50 organizations, PubChem |
-| [RO](https://terminology.nfdi4chem.de/ts/ontologies/ro) | upper level (relations) | CC0 1.0 | BFO & OBO based | Monarch Initiative, OBO Foundry, Gene Ontology, PubChem |
-| [IAO](https://terminology.nfdi4chem.de/ts/ontologies/iao) | information artefacts | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO based | OBO Foundry, Allotrope™, PubChem, ISA tools |
-| [OBI](https://terminology.nfdi4chem.de/ts/ontologies/obi) | biomedicine | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO based | OBO Foundry, Allotrope™, PubChem |
-| [UO](https://terminology.nfdi4chem.de/ts/ontologies/uo) | scientific units | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO based | OBO Foundry, UOM, PubChem |
-| [QUDT](http://www.qudt.org/pages/QUDToverviewPage.html) | scientific units | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO based mapping possible | openPHACTS |
-| [PATO](https://terminology.nfdi4chem.de/ts/ontologies/pato) | phenotypic & physical qualities | [CC-BY 3.0](https://creativecommons.org/licenses/by/3.0/) | BFO & OBO based | OBO Foundry, Allotrope™ |
-| [SIO](https://terminology.nfdi4chem.de/ts/ontologies/sio) | upper level | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO alignment | PubChemRDF, Bio2RDF, SADI Semantic Web Services, DisGeNET, EBI's Gene Expression Atlas, Graph4Code project |
-| [EDAM](https://terminology.nfdi4chem.de/ts/ontologies/edam) | life-sciences & data management | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO mapping possible | EMBOSS, Bio-jETI |
-| [OntoCAPE](http://www.theworldavatar.com/ontology/ontocape/) | upper level & engineering | [GNU GPLv2](https://www.gnu.org/licenses/old-licenses/gpl-2.0) | provides upper level concepts | J-Park Simulator |
+| [ChEBI](https://www.ebi.ac.uk/ols/ontologies/chebi) | Chemie | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO basiert | YMDB, HMDB, PubChem, MassBank, KNApSAcK, UM-BBD, GMD, SMID-DB |
+| [CHIRO](https://terminology.nfdi4chem.de/ts/ontologies/chiro)  | Chemie | [CC0 1.0](https://creativecommons.org/publicdomain/zero/1.0/) | BFO & OBO basiert | unbekannt |
+| [ChemOnt](http://classyfire.wishartlab.com/downloads) | Chemie | benutzerdefinierte OA-Lizenz | unter der *materiellen Einheit* von BFO subsumierbar | YMDB, HMDB, T3DB, ECMDB, DrugBank,PubChem, ChEBI, LIPID MAPS, MoNA |
+| [CHEMINF](https://terminology.nfdi4chem.de/ts/ontologies/cheminf)  | Chemie | [CC-BY 3.0](https://creativecommons.org/licenses/by/3.0/) | BFO & OBO basiert | PubChem, Open PHACTS |
+| [CHMO](https://terminology.nfdi4chem.de/ts/ontologies/chmo)  | Chemie | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO basiert | Chemotion, Allotrope™ |
+| [MOP](https://terminology.nfdi4chem.de/ts/ontologies/mop)  | Chemie | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO basiert| RXNO |
+| [RXNO](https://terminology.nfdi4chem.de/ts/ontologies/rxno)  | Chemie | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO basiert | NameRXN, Wikipedia, Chemotion |
+| [OntoKin](http://www.theworldavatar.com/kb/ontokin/ontokin.owl) | Chemie | unbekannt | OntoCAPE obere Schicht & Module | J-Park Simulator |
+| [AFO](https://www.ebi.ac.uk/ols/ontologies/afo)  | Chemie | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO-Klassen und -Relationen, viele AFO- und einige benutzerdefinierte OBO-Module  | Allotrope™ |
+| [PROCO](https://raw.githubusercontent.com/proco-ontology/PROCO/main/proco.owl) | Chemie | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO/AFO & OBO basiert | Allotrope™ |
+| [MS](https://terminology.nfdi4chem.de/ontologies/ms) | Chemie | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO Mapping möglich | mzML |
+| [nmrCV](https://terminology.nfdi4chem.de/ontologies/nmrcv) | Chemie | [Public Domain Mark 1.0](https://creativecommons.org/publicdomain/mark/1.0/deed) | BFO & OBO Mapping möglich | MetaboLights, HMDB |
+| [BFO](https://terminology.nfdi4chem.de/ontologies/bfo) | höhere Level (nur Klassen) | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | OBO backbone | >300 Ontologien und >50 Organisationen, PubChem |
+| [RO](https://terminology.nfdi4chem.de/ts/ontologies/ro) | höhere Level (Beziehungen) | CC0 1.0 | BFO & OBO basiert | Monarch Initiative, OBO Foundry, Gene Ontolog, PubChem |
+| [IAO](https://terminology.nfdi4chem.de/ts/ontologies/iao) | Informations-Artefakte | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO basiert | OBO Foundry, Allotrope™, PubChem, ISA tools |
+| [OBI](https://terminology.nfdi4chem.de/ts/ontologies/obi) | Biomedizin | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO basiert | OBO Foundry, Allotrope™, PubChem |
+| [UO](https://terminology.nfdi4chem.de/ts/ontologies/uo) | wissenschaftliche Einheiten | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO basiert | OBO Foundry, UOM, PubChem |
+| [QUDT](http://www.qudt.org/pages/QUDToverviewPage.html) | wissenschaftliche Einheiten | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO basiertes Mapping möglich | openPHACTS |
+| [PATO](https://terminology.nfdi4chem.de/ts/ontologies/pato) | phänotypische & physische Eigenschaften | [CC-BY 3.0](https://creativecommons.org/licenses/by/3.0/) | BFO & OBO basiert | OBO Foundry, Allotrope™ |
+| [SIO](https://terminology.nfdi4chem.de/ts/ontologies/sio) | höhere Level | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO-Ausrichtung | PubChemRDF, Bio2RDF, SADI Semantic Web Services, DisGeNET, EBI's Gene Expression Atlas, Graph4Code Projekt |
+| [EDAM](https://terminology.nfdi4chem.de/ts/ontologies/edam) | Biowissenschaften & Datenmanagement | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO Mapping möglich | EMBOSS, Bio-jETI |
+| [OntoCAPE](http://www.theworldavatar.com/ontology/ontocape/) | höhere Level & Technik | [GNU GPLv2](https://www.gnu.org/licenses/old-licenses/gpl-2.0) | bietet Konzepte auf höherer Ebene | J-Park Simulator |
 
 ## Allgemeine wissenschaftliche Ontologien
 
