--- a/i18n/de/docusaurus-plugin-content-docs/current/40_smartlab/10_eln.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/40_smartlab/10_eln.mdx
@@ -69,20 +69,20 @@ ELNs helfen dabei, Versuchsbeschreibungen direkt mit den gesammelten Daten zu ve
     <div className='row'>
         <div className="col" style={{ width: 400, padding: 10, }}>
             <div className="button button--lg button--primary" style={{ width: 400, height: 250, padding: 20, }}>
-            <h3>Avoid Data Loss</h3>
+            <h3>Vermeiden Sie Datenverluste</h3>
             <ul>
-                <li>Linking experimental descriptions to collected data (analogue and digital)</li>
-                <li>Secure data storage, backups</li>
+                <li>Verknüpfung von Versuchsbeschreibungen mit gesammelten Daten (analog und digital)</li>
+                <li>Sichere Datenspeicherung, Backups</li>
             </ul>
             </div>
         </div>
         <div className="col" style={{ width: 400, padding: 10, }}>
             <div className="button button--lg button--secondary" style={{ width: 400, height: 250, padding: 20, }}>
-            <h3>Knowledge Management</h3>
+            <h3>Wissensmanagement</h3>
             <ul>
-                <li>Data is findable</li>
-                <li>Data is accessible</li>
-                <li>Data is available, even after change of personnel</li>
+                <li>Daten sind auffindbar</li>
+                <li>Daten sind zugänglich</li>
+                <li>Daten sind verfügbar, auch nach Personalwechsel</li>
             </ul>
             </div>
         </div>
@@ -93,10 +93,10 @@ ELNs helfen dabei, Versuchsbeschreibungen direkt mit den gesammelten Daten zu ve
     <div className='row'>
         <div className="col" style={{ width: 400, padding: 10, }}>
             <div className="button button--lg button--secondary" style={{ width: 400, height: 250, padding: 20, }}>
-            <h3>Standardised Documentation</h3>
+            <h3>Standardisierte Dokumentation</h3>
             <ul>
-                <li>Structured and standardised collection of metadata</li>
-                <li>Generation of interoperable (meta)data</li>
+                <li>Strukturierte und standardisierte Sammlung von Metadaten</li>
+                <li>Erzeugung interoperabler (Meta-)Daten</li>
             </ul>
             </div>
         </div>
@@ -104,8 +104,8 @@ ELNs helfen dabei, Versuchsbeschreibungen direkt mit den gesammelten Daten zu ve
             <div className="button button--lg button--primary" style={{ width: 400, height: 250, padding: 20, }}>
             <h3>Publication</h3>
             <ul>
-                <li>Data provision for publication of research results</li>
-                <li>Simple transfer of data to repositories</li>
+                <li>Bereitstellung von Daten für die Veröffentlichung von Forschungsergebnissen</li>
+                <li>Einfache Übertragung von Daten an Repositorien</li>
             </ul>
             </div>
         </div>
