--- a/i18n/de/docusaurus-plugin-content-docs/current/40_smartlab/10_eln.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/40_smartlab/10_eln.mdx
@@ -102,7 +102,7 @@ ELNs helfen dabei, Versuchsbeschreibungen direkt mit den gesammelten Daten zu ve
         </div>
         <div className="col" style={{ width: 400, padding: 10, }}>
             <div className="button button--lg button--primary" style={{ width: 400, height: 250, padding: 20, }}>
-            <h3>Publication</h3>
+            <h3>Veröffentlichung</h3>
             <ul>
                 <li>Bereitstellung von Daten für die Veröffentlichung von Forschungsergebnissen</li>
                 <li>Einfache Übertragung von Daten an Repositorien</li>
