--- a/docs/40_smartlab/10_eln.mdx
+++ b/docs/40_smartlab/10_eln.mdx
@@ -161,3 +161,6 @@ Therefore, choosing the right ELN is crucial for a successful implementation of 
 |Security of evidence|Evidence security means the traceable documentation in compliance with legal regulations, e.g. providing the entries with a time stamp, electronic signature, versioning.|
 |Rule compliance|The tool must enable compliance with regulatory requirements, e.g. GLP, GCP.|
 Table Attribution: ZB MED PUBLISSO ELN-Filter, 2921-06 english.
+
+### Finding the right ELN
+There are a plethora of ELNs available and it is not always easy to figure out which is the right one for you. To help you choose an ELN, you can use the [ELN Finder](https://eln-finder.ulb.tu-darmstadt.de/home). Here, more than 40 filter criteria are available. Filter criteria are clearly divided into categories and the result list of the identified ELN tools are displayed in an overview alongside Brief descriptions of the individual tools.
