feat: added links to DFG Code of Conduct and NFS

--- a/docs/50_data_publication/00_data_publication.mdx
+++ b/docs/50_data_publication/00_data_publication.mdx
@@ -54,6 +54,8 @@ Still confused on what data publication in chemistry may look like? We do provid
 ## Sources and further information
 
 - [The citation advantage of linking publications to research data](https://doi.org/10.1371/journal.pone.0230416)
+- [NSF Public Access Plan 2.0](https://nsf-gov-resources.nsf.gov/2023-06/NSF23104.pdf)
+- [DFG Code of Conduct, Guideline 13: Providing public access to research results](https://wissenschaftliche-integritaet.de/en/code-of-conduct/providing-public-access-to-research-results/)
 
 ----
 Main authors: [ORCID:0000-0002-6243-2840](https://orcid.org/0000-0002-6243-2840) and [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661)
