--- a/docs/50_data_publication/60_data_availability_statement.mdx
+++ b/docs/50_data_publication/60_data_availability_statement.mdx
@@ -2,13 +2,14 @@
 title: "Data Availability Statement"
 slug: "/data_availability_statement"
 ---
+
 # Data Availability Statement
 
 ## Introduction
 
-The data availability statement or a similarly termed section, depending on the publisher, is part of the back matter of a manuscript. The back matter usually also contains information on conflicts of interest, author information, acknowledgements and the references. 
+The data availability statement or a similarly termed section, depending on the publisher, is part of the back matter of a manuscript. The back matter usually also contains information on conflicts of interest, author information, acknowledgements and the references.
 
-The data availability statement enhances findability and enables [linking of the manuscript](/docs/best_practice) to the corresponding FAIR dataset in research data [repositories](/docs/repositories) via  [PIDs](/docs/pid) such as DOIs, alternatively using the repository-specific identifiers or accession numbers.
+The data availability statement enhances findability and enables [linking of the manuscript](/docs/best_practice) to the corresponding FAIR dataset in research data [repositories](/docs/repositories) via [PIDs](/docs/pid) such as DOIs, alternatively using the repository-specific identifiers or accession numbers.
 
 Depending on the publisher, the data availability statement may be directly added to the manuscript submitted or is automatically added during manuscript submission via the respective publishers submission system.
 
@@ -18,32 +19,40 @@ PIDs to the corresponding dataset(s) of a scientific article, with one of the sc
 
 ## Templates for Data Availability Statements
 
-<b>Data in a publicly accessible repository with DOI</b>
+<strong>Data in a publicly accessible repository with DOI</strong>
 
 The data generated and analysed during this study are openly available in [repository name] at [DOI as URL].
 
-<b>Data will be available in a public repository with DOI following an embargo from the date of publication</b>
+<strong>
+	Data will be available in a public repository with DOI following an embargo
+	from the date of publication
+</strong>
 
 The data generated and analysed during this study will be openly available in [repository name] at [DOI as URL] following an embargo from the date of publication.
 
-<b>Data derived from public domain resources</b>
+<strong>Data derived from public domain resources</strong>
 
-The data used for/in this study are openly available in [repository name] at [DOI as URL]. The data were derived from sources available in the public domain [list of resources]. 
+The data used for/in this study are openly available in [repository name] at [DOI as URL]. The data were derived from sources available in the public domain [list of resources].
 
-<b>Dataset owned by a third party and restrictions apply to availability</b>
+<strong>
+	Dataset owned by a third party and restrictions apply to availability
+</strong>
 
 The data analysed in this study were provided by [third party] under licence/by permission and are not publicly available. Data are available upon request to [third party, including contact information].
 
-<b>Data available on request to a Data Access Committee due to restrictions by ethical reasons and legal or privacy regulations</b>
+<strong>
+	Data available on request to a Data Access Committee due to restrictions by
+	ethical reasons and legal or privacy regulations
+</strong>
 
 The data generated and analysed in this study are not openly available due to [reasons, including explanation]. The data are available in [repository] on request to a Data Access Committee [link to access information].
 
-<b>Data sharing is not applicable, as no new data is generated.</b>
+<strong>Data sharing is not applicable, as no new data is generated.</strong>
 
 Data sharing is not applicable, as no new data was generated or analysed in this study.
 
-:::danger Notice:                                
-Please note that data availability statements such as *'data available on request from the authors'* and *'authors have elected not to share data'* are unFAIR, as the data is neither findable nor accessible. Furthermore, statements such as *'data available in supplementary material of the article'* are unFAIR, if data is kept in supplementary PDFs, as this data is not interoperable and, hence, difficult to be reused.
+:::danger Notice:  
+Please note that data availability statements such as _'data available on request from the authors'_ and _'authors have elected not to share data'_ are unFAIR, as the data is neither findable nor accessible. Furthermore, statements such as _'data available in supplementary material of the article'_ are unFAIR, if data is kept in supplementary PDFs, as this data is not interoperable and, hence, difficult to be reused.
 :::
 
 ## Sources and further information
@@ -53,9 +62,10 @@ Please note that data availability statements such as *'data available on reques
 - [Joint Declaration of Data Citation Principles](https://doi.org/10.25490/a97f-egyk)
 - [Data Access Committee - European Genome-Phenome Archive ](https://ega-archive.org/submission/data_access_committee)
 
-*This article is licensed under a Creative Commons Universal (CC0 1.0) Public Domain Dedication International License.*
+_This article is licensed under a Creative Commons Universal (CC0 1.0) Public Domain Dedication International License._
 
 ![CC0 badge](https://licensebuttons.net/l/zero/1.0/88x31.png)
 
-----
+---
+
 Main author: [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661)
