--- a/i18n/de/docusaurus-plugin-content-docs/current/50_data_publication/60_data_availability_statement.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/50_data_publication/60_data_availability_statement.mdx
@@ -2,39 +2,55 @@
 title: "Data Availability Statement"
 slug: "/data_availability_statement"
 ---
+
 # Datenverfügbarkeitserklärung
 
 ## Einleitung
 
-Die Erklärung zur Datenverfügbarkeit ist Teil des hinteren Teils eines Manuskripts. Sie enthält in der Regel auch Informationen zu Interessenkonflikten, Autoreninformationen, Danksagungen und Referenzen. 
+Die Erklärung zur Datenverfügbarkeit ist Teil des hinteren Teils eines Manuskripts. Sie enthält in der Regel auch Informationen zu Interessenkonflikten, Autoreninformationen, Danksagungen und Referenzen.
 
-Die Datenverfügbarkeitserklärung ermöglicht die [Verlinkung des Manuskripts](/docs/data_publication) mit dem entsprechenden FAIR-Datensatz in Forschungsdaten-[Repositorien](/docs/repositories) über [DOIs](/docs/pid), alternativ unter Verwendung der repositoriumsspezifischen Identifikatoren oder Akzessionsnummern.  
+Die Datenverfügbarkeitserklärung ermöglicht die [Verlinkung des Manuskripts](/docs/data_publication) mit dem entsprechenden FAIR-Datensatz in Forschungsdaten-[Repositorien](/docs/repositories) über [DOIs](/docs/pid), alternativ unter Verwendung der repositoriumsspezifischen Identifikatoren oder Akzessionsnummern.
 
 ## Templates for Data Availability Statements
 
-<b>Daten in einem öffentlich zugänglichen Repositorium mit DOI</b>
+<strong>Daten in einem öffentlich zugänglichen Repositorium mit DOI</strong>
 
 Die im Rahmen dieser Studie generierten und analysierten Daten sind in [Repositoriumname] unter [DOI als URL] offen verfügbar.
-<b>Daten werden in einem öffentlich zugänglichen Repositorium mit DOI nach einem Embargo ab dem Datum der Veröffentlichung verfügbar sein</b>
+
+<strong>
+	Daten werden in einem öffentlich zugänglichen Repositorium mit DOI nach einem
+	Embargo ab dem Datum der Veröffentlichung verfügbar sein
+</strong>
 
 Die im Rahmen dieser Studie generierten und analysierten Daten werden nach einem Embargo ab dem Datum der Veröffentlichung in [Name des Repositorien] unter [DOI als URL] offen verfügbar sein
 
-<b>Daten aus öffentlich zugänglichen Quellen</b>
+<strong>Daten aus öffentlich zugänglichen Quellen</strong>
 
 Die Daten, die in dieser Studie verwendet wurden, sind in [Name des Repositoriums] unter [DOI als URL] frei zugänglich. Die Daten wurden aus öffentlich zugänglichen Quellen [Liste der Ressourcen] abgeleitet.
-<b>Daten sind Eigentum eines Dritten und die Verfügbarkeit ist eingeschränkt</b>
+
+<strong>
+	Daten sind Eigentum eines Dritten und die Verfügbarkeit ist eingeschränkt
+</strong>
 
 Die in dieser Studie analysierten Daten wurden von [Drittpartei] unter Lizenz/mit Genehmigung zur Verfügung gestellt und sind nicht öffentlich zugänglich. Die Daten sind auf Anfrage an [Dritte, einschließlich Kontaktinformationen] verfügbar.
-<b>Daten sind auf Anfrage bei einem Datenzugangsausschuss aufgrund von Einschränkungen durch ethische Gründe und rechtliche oder datenschutzrechtliche Bestimmungen verfügbar</b>
+
+<strong>
+	Daten sind auf Anfrage bei einem Datenzugangsausschuss aufgrund von
+	Einschränkungen durch ethische Gründe und rechtliche oder
+	datenschutzrechtliche Bestimmungen verfügbar
+</strong>
 
 Die in dieser Studie erzeugten und analysierten Daten sind aus [Gründen, einschließlich Erklärung] nicht öffentlich zugänglich. Die Daten sind in [Repositorium] auf Anfrage bei einem Datenzugriffsausschuss [Link zu Zugangsinformationen] verfügbar.
 
-<Die gemeinsame Nutzung von Daten ist nicht möglich, da keine neuen Daten generiert werden.</b>
+<strong>
+	Die gemeinsame Nutzung von Daten ist nicht möglich, da keine neuen Daten
+	generiert werden.
+</strong>
 
 Die gemeinsame Nutzung von Daten ist nicht anwendbar, da in dieser Studie keine neuen Daten generiert oder analysiert wurden.
 
-:::danger Notice:                                
-Bitte beachten Sie, dass Angaben zur Datenverfügbarkeit wie *'Daten sind auf Anfrage bei den Autoren verfügbar'* und *'die Autoren haben sich entschieden, die Daten nicht weiterzugeben'* unFAIR sind, da die Daten weder auffindbar noch zugänglich sind. Außerdem sind Angaben wie *'data available in supplementary material of the article'* unFAIR, wenn die Daten in ergänzenden PDFs aufbewahrt werden, da diese Daten nicht interoperabel sind und daher schwer wiederverwendet werden können.
+:::danger Notice:  
+Bitte beachten Sie, dass Angaben zur Datenverfügbarkeit wie _'Daten sind auf Anfrage bei den Autoren verfügbar'_ und _'die Autoren haben sich entschieden, die Daten nicht weiterzugeben'_ unFAIR sind, da die Daten weder auffindbar noch zugänglich sind. Außerdem sind Angaben wie _'data available in supplementary material of the article'_ unFAIR, wenn die Daten in ergänzenden PDFs aufbewahrt werden, da diese Daten nicht interoperabel sind und daher schwer wiederverwendet werden können.
 :::
 
 ## Quellen und weitere Informationen
@@ -44,9 +60,10 @@ Bitte beachten Sie, dass Angaben zur Datenverfügbarkeit wie *'Daten sind auf An
 - Gemeinsame Erklärung über die Grundsätze der Datenzitation](https://doi.org/10.25490/a97f-egyk)
 - Datenzugangsausschuss - Europäisches Genom-Phänomen-Archiv](https://ega-archive.org/submission/data_access_committee)
 
-*Dieser Artikel steht unter einer Creative Commons Universal (CC0 1.0) Public Domain Dedication International License.
+\*Dieser Artikel steht unter einer Creative Commons Universal (CC0 1.0) Public Domain Dedication International License.
 
 ![CC0 badge](https://licensebuttons.net/l/zero/1.0/88x31.png)
 
-----
+---
+
 Main author: [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661)
